--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,3 +7,8 @@
 # two:
 #   name: MyString
 #   email: MyString
+
+matt:
+  name: Matt Example
+  email: matt@example.com
+  password_digest: <%= User.digest('password') %>
